# tap-intacct

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  pytest.ini  sample_config.json  setup.cfg  tox.ini
.github/: pull_request_template.md
.github/workflows/: main.yml  smoke-test.yml
requirements/: compile.py  py37.txt  py38.txt  requirements.in
src/tap_intacct/: __init__.py  client.py  const.py  exceptions.py
src/tap_intacct/schemas/: account_balances_by_dimensions.json  accounts_payable_bills.json  accounts_payable_vendors.json  adjustments.json  customers.json  general_ledger_accounts.json  general_ledger_details.json  general_ledger_journal_entries.json  general_ledger_journal_entry_lines.json  invoices.json  items.json  projects.json
tests/: conftest.py  test_client.py  test_init.py
